# vizkit

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/chromatic/: Cargo.toml
crates/chromatic/src/: categorical.rs  cividis.rs  color.rs  common.rs  diverging.rs  lib.rs  main.rs  rainbow.rs  sequential.rs  sinebow.rs  turbo.rs  viridis.rs  warm_cold.rs
crates/scale/: Cargo.toml
crates/scale/src/: color.rs  continuous.rs  discrete.rs  lib.rs  linear.rs  log.rs  main.rs  pow.rs  ticks.rs
crates/time/: Cargo.toml
crates/time/src/: day.rs  hour.rs  interval.rs  lib.rs  main.rs  millisecond.rs  minute.rs  month.rs  second.rs  year.rs
crates/vizkit/: Cargo.toml
crates/vizkit-chromatic/: Cargo.toml
crates/vizkit-scale/: Cargo.toml
crates/vizkit-time/: Cargo.toml
crates/vizkit/src/: lib.rs
examples/colormaps/: Cargo.toml
examples/egui-colormaps/: Cargo.toml  README.md
examples/iced-arrows/: Cargo.toml  README.md
examples/iced-colormaps/: Cargo.toml  README.md
examples/iced-job-projections/: Cargo.toml  README.md  build.rs
examples/iced-job-projections/src/: data.rs  iced_frame.rs  legend.rs  main.rs  manual_processing.rs  plot.rs  polars_processing.rs
examples/svg-scatter-chart/: Cargo.toml  README.md  build.rs
src/: axis.rs  chromatic.rs  draw.rs  generator.rs  lib.rs  main.rs  scale.rs  time.rs
src/chromatic/: categorical.rs  cividis.rs  color.rs  common.rs  diverging.rs  rainbow.rs  sequential.rs  sinebow.rs  turbo.rs  viridis.rs  warm_cold.rs
src/draw/: arrow.rs  attrs.rs  axis.rs  circle.rs  grid.rs  line.rs  line_attrbs.rs  line_attrs.rs  properties.rs  rect.rs  text.rs  text_attrbs.rs  text_attrs.rs
src/scale/: color.rs  continuous.rs  discrete.rs  linear.rs  log.rs  pow.rs  ticks.rs
src/time/: day.rs  hour.rs  interval.rs  millisecond.rs  minute.rs  month.rs  second.rs  year.rs
(+36 files in other folders)
