[package]
name = "vizkit"
description = "A rendering-agnostic kit for data visualization"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", optional = true }

[features]
time = ["dep:chrono"]

[workspace]
members = ["examples/*"]

[dev-dependencies]
rstest = "0.26.1"
