[package]
name = "iced-job-projections"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas"] }
# polars = { version = "0.53.0", features = ["json", "lazy", "replace", "round_series"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vizkit = { path = "../.." }

[build-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
